--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>The Super Awesome Weather App</h1>
+    <h1>Weather App</h1>
 </header>
 <div class="main">
     <div id="search">
@@ -25,8 +25,9 @@
 
     </div>
 </div>
+<script src="js/script.js"></script>
 <script src="js/app.js"></script>
 <script src="js/weather-data.js"></script>
-<script src="js/script.js"></script>
+
 </body>
 </html>
